Fixed logging to actually output (hopefully) and handled errors a bit better